Code Refactoring (Business logic moved from Controllers to Services) (Duplicate codes in HTML files moved to thymeleaf fragments)